# riemann-c-client

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile.in  Makefile.am  NEWS  NEWS.md  README.md  configure.ac
debian/: .gitignore  changelog  control  copyright  libriemann-client0.docs  libriemann-client0.symbols  rules  watch
docs/: API.md
lib/: attribute.c  client.c  event.c  libriemann.ver  message.c  query.c  riemann-client.pc.in
lib/riemann/: _private.h  attribute.c  attribute.h  client.c  client.h  event.c  event.h  libriemann.ver  message.c  message.h  query.c  query.h  riemann-client.h  riemann-client.h.in  simple.c  simple.h
lib/riemann/client/: tcp.c  tcp.h  tls-gnutls.c  tls-gnutls2.c  tls-gnutls3.c  tls.c  tls.h  udp.c  udp.h
lib/riemann/proto/: riemann.proto
src/: cmd-query.c  cmd-send.c  riemann-client.1  riemann-client.c  riemann-client.ronn  riemann-query.c  riemann-send-events.c
tests/: check_attributes.c  check_client.c  check_events.c  check_library.c  check_libriemann.c  check_messages.c  check_queries.c  check_simple.c  check_symver.c  mocks.c  mocks.h  run-coveralls  tests.h
tests/etc/: cacert.pem  client.crt  client.key  riemann.config  server.crt  server.pkcs8
